Fixed testimonial contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,7 +109,7 @@ ol, ul {
 }
 
 .testimonial {
-  background-color: #989898;
+  background-color: #737373;
   max-width: 100%;
   height: 40%;
   border-radius: 6px;
